# Flipfinity

./: .gitignore  BUILD.md  BUILDLINUX.md  CMakeLists.txt  README.md
docs/: namingconvention.md  notes.md
include/: MainMenu.h  color.h  flipfinity.h  mainmenu.h  object.h  object_linked_list.h  renderer.h  vector2.h
include/Data/: Color.h
include/Math/: Color.h  Vector2.h
include/Objects/: ClickableRectangle.h  ColorRectangle.h  Object.h  SceneColorBackground.h  Transform.h
include/Renderer/: ObjectRenderer.h
include/data/: color.h  vector2.h
include/objects/: object.h
include/renderer/: renderer.h
include/scenes/: mainmenu.h
src/: flipfinity.c  main.c  mainmenu.c  object.c  object_linked_list.c  renderer.c
